# cognit

./: .gitignore  CHANGELOG.md  INTENTS.md  LICENSE  PLAN-V1.md  README.md  ROADMAP.md  UI-REDESIGN-PLAN.md  UI-REDESIGN.md  hatch_build.py  pyproject.toml
.github/examples/: quizz-generate.yml  quizz-grade.yml
.github/workflows/: ci.yml  release.yml
actions/quizz-generate/: action.yml
actions/quizz-grade/: action.yml
docs/: context-engineering-quiz-generation.md
docs/design/learning-ux/: 00-brief.md  01-anchors.md
docs/superpowers/plans/: 2026-05-22-claude-agent-sdk-engine.md  2026-05-24-quiz-quality-and-explanations.md  2026-05-24-single-task-generation.md  2026-05-25-cognit-mcp-server-m1.md  2026-05-25-cognit-mcp-server-m2.md  2026-05-26-cognit-mcp-server-m3.md
docs/superpowers/specs/: 2026-05-22-claude-agent-sdk-engine-design.md  2026-05-23-agentic-outline-generation-design.md  2026-05-24-single-task-quiz-generation-design.md  2026-05-25-cognit-as-claude-code-plugin-design.md
docs/superpowers/transcripts/: 2026-05-24-pr6-run.json
scripts/: capture_demo_quiz.py  dev_generate.py  dummy_rate_limit_probe.py  record-demo.sh  record_demo.py  screenshot.py  vendor_mermaid.py
scripts/demo_data/: feed.json  quiz.json
src/cognit/: __main__.py
src/cognit/cli/: __init__.py  take.py  version.py
src/cognit/comment/: parse.py  render.py
src/cognit/engine/: generate.py  grade.py  llm.py  llm_anthropic.py  llm_claude_agent.py  llm_fake.py  mermaid.py  models.py
src/cognit/engine/_mermaid_docker/: Dockerfile  README.md  validate.mjs
src/cognit/engine/prompts/: generate.txt  system_generate.txt  system_grade.txt
src/cognit/ghio/: diff.py
src/cognit/mcp/: __init__.py  __main__.py  confine.py  grading.py  launch.py  server.py  state.py  validate.py  web.py
src/cognit/mcp/assets/: index.html  quiz_mcp.js  styles.css
src/cognit/server/: app.py  streaming.py
src/cognit/server/assets/: index.html  quiz.js  styles.css
src/quizz/: __init__.py  __main__.py
src/quizz/cli/: __init__.py  generate.py  grade.py  take.py
src/quizz/comment/: parse.py  render.py
src/quizz/engine/: generate.py  grade.py  llm.py  llm_anthropic.py  llm_claude_agent.py  llm_fake.py  llm_githubmodels.py  mermaid.py  models.py
src/quizz/engine/_mermaid_docker/: Dockerfile  README.md
src/quizz/engine/prompts/: generate.txt  grade_open.txt  mermaid.txt  system_generate.txt  system_grade.txt  system_mermaid.txt
src/quizz/ghio/: diff.py  pr.py
src/quizz/server/: app.py
src/quizz/server/assets/: index.html  mermaid.esm.min.js  quiz.js  styles.css
tests/: conftest.py  test_smoke.py
tests/cli/: test_generate.py  test_grade.py  test_main_module.py  test_root.py  test_take.py  test_take_select.py
tests/comment/: test_render.py  test_roundtrip.py
tests/engine/: test_drain_agent_sink.py  test_generate.py  test_grade.py  test_llm_anthropic.py  test_llm_claude_agent.py  test_llm_fake.py  test_llm_githubmodels.py  test_mermaid.py  test_mermaid_uniformity.py  test_models.py  test_prompts.py  test_submit_validation_hook.py
tests/fixtures/diffs/: small_refactor.patch
tests/ghio/: test_diff.py  test_pr.py
tests/mcp/: test_confine.py  test_file_diff.py  test_generation_e2e.py  test_grading.py  test_import.py  test_launch.py  test_state.py  test_tools.py  test_validate.py  test_web.py
tests/server/: test_app.py  test_broker.py  test_progress.py  test_submit_with_claude_agent.py  test_ui_flow.py  test_ui_generating.py
