[project]
name = "cognit"
dynamic = ["version"]
description = "Voluntary PR-author comprehension quiz tool"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "pydantic>=2.7",
    "typer>=0.12",
    "httpx>=0.27",
    "fastapi>=0.136.1",
    "uvicorn>=0.47.0",
    "claude-agent-sdk>=0.1.44",
    "mcp>=1.2",
]

[project.scripts]
cognit = "cognit.cli:app"

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "syrupy",
    "ruff",
    "mypy",
    "pillow>=12.2.0",
    "playwright>=1.59.0",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/cognit"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
strict = true
files = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
